# vamp-interface

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: archive-locations.md  parquet-index.md
scripts/: check_arc_oracle.py  cut_llf_clips.py  fetch_ffhq_pngs.py  make_initial_covers.py  make_stage4_5_cover.py  phase2_readout.py  run_arc_adapter_latent.bat  run_arc_adapter_latent_a2.bat  run_arc_adapter_latent_a2_full_native.bat  run_arc_adapter_latent_a2_t.bat  run_arc_adapter_latent_a2_t2.bat  run_arc_adapter_latent_a_aligned14.bat  run_arc_adapter_latent_a_full_crop.bat  run_arc_adapter_latent_a_full_native.bat  run_arc_adapter_latent_a_full_pool.bat  run_arc_adapter_latent_a_full_roi.bat  run_arc_adapter_latent_both.bat  run_arc_adapter_pixel.bat  run_arc_overnight_latent_a2_t.bat  run_arc_overnight_latent_a2_t2.bat  run_arc_pixel_aligned.bat  run_arc_pixel_train.bat  run_arc_validate_latent_a2_t.bat  run_arc_validate_latent_a2_t2.bat  run_diagnose_left_tail.bat  run_encode_aligned_to_latent.bat  run_encode_full_to_latent.bat  run_ffhq_metrics.bat  run_mediapipe_distill_bs_a.bat  run_mediapipe_distill_bs_v2b.bat  run_mediapipe_distill_bs_v2c.bat  run_mediapipe_distill_bs_v2d.bat  run_mediapipe_distill_bs_v2e.bat  run_mediapipe_distill_bs_v3_t.bat  run_mediapipe_distill_bs_v4_pgd.bat  run_mediapipe_overnight_bs_v3_t.bat  run_mediapipe_validate_bs_a.bat  run_mediapipe_validate_bs_v2c.bat  run_mediapipe_validate_bs_v2d.bat  run_mediapipe_validate_bs_v2e.bat  (+18 more)
specs/: age_iter01.yaml  compose_smile_elderly.yaml  compose_smile_young_f.yaml  race_iter01.yaml  race_iter02.yaml  smile_iter01.yaml  smile_iter02.yaml  smile_iter03.yaml  smile_iter04.yaml  smile_iter05.yaml  smile_iter06.yaml  smile_iter07.yaml  smile_iter08.yaml  squint_compose_iter01.yaml  squint_compose_iter01_elderly_latin_m.yaml  (+8 more)
(+506 files in other folders)
