[project]
name = "vamp-interface"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "omegaconf>=2.3",
    "numpy>=2.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1",
    "scikit-learn>=1.6",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "pacmap>=0.9.1",
    "embedding-atlas>=0.20.0",
    "pandas>=3.0.2",
]

